removed run in gradle